# semilattice

./: default.nix
acetone/: README  acetone.cabal  default.nix
acetone/main/: acetonec.hs
acetone/src/Acetone/: Anf.hs  Ast.hs  Interface.hs  Lower.hs  Syntax.hs  Type.hs
acetone/src/Acetone/Syntax/: Verbose.hs
acetone/src/Acetone/Syntax/Verbose/: Lex.x  Parse.y
acetone/src/Acetone/Type/: Check.hs  Constraint.hs
acetone/src/Epoxy/: Anf.hs  Build.hs
acetone/src/Main/: Acetonec.hs
acetone/std/: lazy.aht
acetone/std/algebraic/: coproduct.aht  initial.aht  product.aht  terminal.aht
acetone/std/function/: SKI.act  SKI.aht  category.act  category.aht  flip.act  flip.aht  functor.aht
alkane/: Cargo.toml  default.nix
alkane/src/: lib.rs
alkane/src/storage/log_file/: mod.rs
deet/: README  default.nix
deet/db/: setup  sqitch.conf  sqitch.plan
deet/db/deploy/: createSchema.sql  createWikiPages.sql
deet/db/revert/: createSchema.sql  createWikiPages.sql
deet/src/Deet/: Main.php  README
deet/src/Deet/Support/: Database.php  Template.php  Wikitext.php
deet/src/Deet/Support/Template/: Original.php
deet/src/Deet/ViewPage/: Page.php  README  Titlespace.php  Titlespaces.php
deet/src/Deet/ViewUseCase/: UseCase.php  UseCaseTitlespace.php
deet/src/Deet/ViewWikiPage/: WikiPage.php  WikiTitlespace.php
deet/web/: README  bootstrap.php  viewPage.php
deet/web/static/: README  style.css
nix/: README  pkgs.nix  psalm.nix
organization/: README
rain/: default.nix
rain/src/: rain.cob
salp/: README  default.nix  salp.cabal
salp/executable/: salpc.hs
