cabal-version: >= 1.8
build-type: Simple

name: acetone
version: 0.0.0

library
    build-depends:
        base,
        bytestring,
        containers,
        lens,
        mtl,
        transformers

    exposed-modules:
        Acetone.Ast,
        Acetone.Interface,
        Acetone.Type,
        Acetone.Type.Check,
        Acetone.Type.Constraint,
        Epoxy.Anf,
        Main.Acetonec

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    hs-source-dirs:
        src

executable acetonec
    build-depends: acetone, base
    hs-source-dirs: main
    main-is: acetonec.hs
