cabal-version: >= 1.8
build-type: Simple

name: acetone
version: 0.0.0

library
    build-depends:
        base,
        bytestring,
        containers

    exposed-modules:
        Acetone.Ast,
        Acetone.Interface,
        Acetone.Type,
        Acetone.Type.Check,
        Acetone.Type.Constraint,
        Epoxy.Anf

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    hs-source-dirs:
        src
