cabal-version: >= 1.8
build-type: Simple

name: acetone
version: 0.0.0

library
    build-depends:
        array,
        base,
        bytestring,
        containers,
        file-embed,
        lens,
        mtl,
        transformers

    build-tools:
        alex,
        happy

    exposed-modules:
        Acetone.Ast,
        Acetone.Lower,
        Acetone.Syntax,
        Acetone.Syntax.Verbose,
        Acetone.Syntax.Verbose.Lex,
        Acetone.Syntax.Verbose.Parse,
        Acetone.Type,
        Acetone.Type.Check,
        Acetone.Type.Constraint,
        Epoxy.Anf,
        Epoxy.Build,
        Epoxy.Target.Lua.Compile,
        Epoxy.Target.Lua.Link,
        Epoxy.Target.Lua.Object,
        Main.Acetonec

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    hs-source-dirs:
        src

executable acetonec
    build-depends: acetone, base
    hs-source-dirs: main
    main-is: acetonec.hs
