cabal-version: >= 1.8
build-type: Simple

name: salp
version: 0.0.0

library
    build-depends:
        base,
        bytestring,
        megaparsec,
        mtl,
        transformers,
        unordered-containers

    exposed-modules:
        Salp.Ast,
        Salp.Lex,
        Salp.Parse,
        Salp.Salpc,
        Salp.Translate

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    hs-source-dirs:
        library

executable salpc
    build-depends:
        base,
        salp

    hs-source-dirs:
        executable

    main-is:
        salpc.hs
